--- a/z1_seli.html
+++ b/z1_seli.html
@@ -7,11 +7,10 @@
 </HEAD> 
 <BODY> 
 <SCRIPT> 
-document.write("%%%%%%%%%%%%%%%%%%%%%%%%%%".fontcolor("800000")+"<br>"); 
-document.write("%".fontcolor("#808000")+"&nbsp;&nbsp;&nbsp;Pavlo".fontcolor("green")+"&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
- *".fontcolor("#FF00FF")+"<br>"); 
-document.write("%".fontcolor("#808000")+"&nbsp;&nbsp;&nbsp;Seliak".fontcolor("green")+"&nbsp;&nbsp;*".fontcolor("#FF00FF")+"<br>"); 
-document.write("%%%%%%%%%%%%%%%%%%%%%%%%%".fontcolor("#FF00FF")+"<br>"); 
+document.write("$$$$$$$$$".fontcolor("800000")+"<br>"); 
+document.write("$".fontcolor("#808000")+"&nbsp;&nbsp;&nbsp;Pavlo".fontcolor("green")+"&nbsp;&nbsp;$".fontcolor("#808000")+"<br>"); 
+document.write("$".fontcolor("#808000")+"&nbsp;&nbsp;&nbsp;Seliak".fontcolor("green")+"&nbsp;&nbsp;$".fontcolor("#808000")+"<br>"); 
+document.write("$$$$$$$$$".fontcolor("#800000")+"<br>"); 
 </SCRIPT> 
 </BODY> 
 </HTML>
