--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html> 
      <head> 
-            <title> Pavlo Seliak 2G2</title> 
- 10 
+            <title> SZKIELET ZALICZENIOWY Pavlo Seliak 2G2</title> 
           <script language="JavaScript"> 
              function WinOpen_z3()  
                { 
