--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
      <head> 
             <title> SZKIELET ZALICZENIOWY Pavlo Seliak 2G2</title> 
           <script language="JavaScript"> 
-             function WinOpen_z3()  
+             function WinOpen_zadanie3()  
                { 
-window.open("z3_sel.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+window.open("zadanie3_sel.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
                } 
-function WinOpen_z4()  
+function WinOpen_zadanie4()  
                { 
-window.open("z4_sel.html","okienko_z4","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400"); 
+window.open("zadanie4_sel.html","okienko_z4","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400"); 
                } 
 function okno_zamknij()  
                        { 
@@ -18,8 +18,8 @@ function okno_zamknij()
       </head> 
 <body> 
    <form> 
-        <input type="button_z3" name="zadanie3" value="zadanie3-seliak" onclick="WinOpen_z3(' ')"> 
-        <input type="button_z4" name="zadanie4" value="zadanie4-seliak" onclick="WinOpen_z4(' ')"> 
+        <input type="button_zadanie3" name="zadanie3" value="zadanie3-seliak" onclick="WinOpen_zadanie3(' ')"> 
+        <input type="button_zadanie4" name="zadanie4" value="zadanie4-seliak" onclick="WinOpen_zadanie4(' ')"> 
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
 </body> 
