--- a/zadanie4_sel.html
+++ b/zadanie4_sel.html
@@ -63,7 +63,13 @@ wyglądały dobrze na dowolnym ekranie.
   <li>
     <b>Przepisz linie kody pod nimi wytłumaczenie jak działa ta ten fragment kodu 
 window.open("obraz.html","okienko","toolbar=no,directories=no,menubar=no,height=280,width=160,top=200,left=200"); </b><br>
-    
+     ukrywa standardowy pasek narzędzi
+    ukrywa przyciski katalogów 
+    ukrywa menu przeglądarki           
+Height : ustawia wysokość okna - 280 px 
+Width : ustawia szerokość okna - 160 px
+Top: ustawia położenie okna względem góry ekranu  - 200 px
+Left: ustawia położenie okna względem lewej strony ekranu - 200px
   </li>
 </ul>
 </body> 
