--- a/zadanie3_sel.html
+++ b/zadanie3_sel.html
@@ -10,7 +10,7 @@ window.open("obraz.html","okienko","toolbar=no,directories=no,menubar=no,height=
       </head> 
 <body> 
    <form> 
-  <input type="button" name="zadanie3" value="zadanie3-nazwisko ucznia" onclick="WinOpen(' ')"> 
+  <input type="button" name="zadanie3" value="zadanie3-seliak" onclick="WinOpen('obraz1.gif')"> 
     </form> 
 </body> 
 </html>
