--- a/zadanie4_sel.html
+++ b/zadanie4_sel.html
@@ -9,7 +9,7 @@
     W 1995 roku.
   </li>
   <li>
-    <b>)dlaczego jest to język skryptowy </b><br>
+    <b>dlaczego jest to język skryptowy </b><br>
     Nie musi zostać skompilowany do kodu maszynowego, aby można było zobaczyć efekty jego działania.
   </li>
   <li>
@@ -63,9 +63,9 @@ wyglądały dobrze na dowolnym ekranie.
   <li>
     <b>Przepisz linie kody pod nimi wytłumaczenie jak działa ta ten fragment kodu 
 window.open("obraz.html","okienko","toolbar=no,directories=no,menubar=no,height=280,width=160,top=200,left=200"); </b><br>
-     ukrywa standardowy pasek narzędzi
-    ukrywa przyciski katalogów 
-    ukrywa menu przeglądarki           
+    toolbar=no ukrywa standardowy pasek narzędzi
+    directories=no ukrywa przyciski katalogów 
+    menubar=no ukrywa menu przeglądarki           
 Height : ustawia wysokość okna - 280 px 
 Width : ustawia szerokość okna - 160 px
 Top: ustawia położenie okna względem góry ekranu  - 200 px
