--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
           <script language="JavaScript">
                function WinOpen_zadanie2()  
                { 
-window.open("zadanie2_sel.html","okienko_z2","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+window.open("zadanie2_seli.html","okienko_z2","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
                } 
              function WinOpen_zadanie3()  
                { 
