--- a/zadanie1_seli.html
+++ b/zadanie1_seli.html
@@ -7,10 +7,10 @@
 </HEAD> 
 <BODY> 
 <SCRIPT> 
-document.write("$$$$$$$$$".fontcolor("800000")+"<br>"); 
-document.write("$".fontcolor("#808000")+"&nbsp;&nbsp;&nbsp;Pavlo".fontcolor("green")+"&nbsp;&nbsp;$".fontcolor("#808000")+"<br>"); 
-document.write("$".fontcolor("#808000")+"&nbsp;&nbsp;&nbsp;Seliak".fontcolor("green")+"&nbsp;&nbsp;$".fontcolor("#808000")+"<br>"); 
-document.write("$$$$$$$$$".fontcolor("#800000")+"<br>"); 
+document.write("=========".fontcolor("#FF00FF")+"<br>"); 
+document.write("=".fontcolor("#FF00FF")+"&nbsp;&nbsp;&nbsp;Pavlo".fontcolor("#0000FF")+"&nbsp;&nbsp;$".fontcolor("#FF00FF")+"<br>"); 
+document.write("=".fontcolor("#FF00FF")+"&nbsp;&nbsp;&nbsp;Seliak".fontcolor("#0000FF")+"&nbsp;&nbsp;$".fontcolor("#FF00FF")+"<br>"); 
+document.write("=========".fontcolor("#FF00FF")+"<br>"); 
 </SCRIPT> 
 </BODY> 
 </HTML>
