--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
      <head> 
             <title> SZKIELET ZALICZENIOWY Pavlo Seliak 2G2</title> 
           <script language="JavaScript">
-               function WinOpen_zadanie1_seli()  
+               function WinOpen_zadanie1()  
                { 
 window.open("zadanie1_seli.html","okienko_z1","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
                } 
