--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@ function okno_zamknij()
           </script> 
       </head> 
 <body> 
-   <form> 
+   <form>
+        <input type="button_zadanie1" name="zadanie1" value="zadanie1-seliak" onclick="WinOpen_zadanie2(' ')">
         <input type="button_zadanie2" name="zadanie2" value="zadanie2-seliak" onclick="WinOpen_zadanie2(' ')">
         <input type="button_zadanie3" name="zadanie3" value="zadanie3-seliak" onclick="WinOpen_zadanie3(' ')"> 
         <input type="button_zadanie4" name="zadanie4" value="zadanie4-seliak" onclick="WinOpen_zadanie4(' ')"> 
