--- a/zadanie1_seli.html
+++ b/zadanie1_seli.html
@@ -8,8 +8,8 @@
 <BODY> 
 <SCRIPT> 
 document.write("=========".fontcolor("#FF00FF")+"<br>"); 
-document.write("=".fontcolor("#FF00FF")+"&nbsp;&nbsp;&nbsp;Pavlo".fontcolor("#0000FF")+"&nbsp;&nbsp;=".fontcolor("#FF00FF")+"<br>"); 
-document.write("=".fontcolor("#FF00FF")+"&nbsp;&nbsp;&nbsp;Seliak".fontcolor("#0000FF")+"&nbsp;&nbsp;=".fontcolor("#FF00FF")+"<br>"); 
+document.write("=".fontcolor("#FF00FF")+"&nbsp;&nbsp;&nbsp;Pavlo".fontcolor("#0000FF")+"&nbsp;&nbsp;=".fontcolor("#FF00FF")+"=<br>"); 
+document.write("=".fontcolor("#FF00FF")+"&nbsp;&nbsp;&nbsp;Seliak".fontcolor("#0000FF")+"&nbsp;&nbsp;=".fontcolor("#FF00FF")+"=<br>"); 
 document.write("=========".fontcolor("#FF00FF")+"<br>"); 
 </SCRIPT> 
 </BODY> 
