--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@ window.open("zadanie3_sel.html","okienko_z3","toolbar=no,directories=no,menubar=
 function WinOpen_zadanie4()  
                { 
 window.open("zadanie4_sel.html","okienko_z4","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400"); 
-               } 
+               }
+               function WinOpen_zadanie4()  
+               { 
+window.open("zadanie5_sel.html","okienko_z5","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400"); 
+               }
 function okno_zamknij()  
                        { 
                              window.close() 
@@ -29,7 +33,8 @@ function okno_zamknij()
         <input type="button_zadanie1" name="zadanie1" value="zadanie1-seliak" onclick="WinOpen_zadanie1(' ')">
         <input type="button_zadanie2" name="zadanie2" value="zadanie2-seliak" onclick="WinOpen_zadanie2(' ')">
         <input type="button_zadanie3" name="zadanie3" value="zadanie3-seliak" onclick="WinOpen_zadanie3(' ')"> 
-        <input type="button_zadanie4" name="zadanie4" value="zadanie4-seliak" onclick="WinOpen_zadanie4(' ')"> 
+        <input type="button_zadanie4" name="zadanie4" value="zadanie4-seliak" onclick="WinOpen_zadanie4(' ')">
+        <input type="button_zadanie5" name="zadanie5" value="zadanie5-seliak" onclick="WinOpen_zadanie5(' ')">
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
 </body> 
