--- a/zadanie5_seli.html
+++ b/zadanie5_seli.html
@@ -4,19 +4,19 @@
           <script language="JavaScript">
                function WinOpen_zadanie1()  
                { 
-window.open("zdjecie1_seli.html","okienko_z1","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+window.open("zdjecie1_seliak.html","okienko_z1","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
                } 
                function WinOpen_zadanie2()  
                { 
-window.open("zdjecie2_seli.html","okienko_z2","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+window.open("zdjecie2_seliak.html","okienko_z2","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
                } 
              function WinOpen_zadanie3()  
                { 
-window.open("zdjecie3_sel.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+window.open("zdjecie3_seliak.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
                } 
 function WinOpen_zadanie4()  
                { 
-window.open("zdjecie4_sel.html","okienko_z4","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400"); 
+window.open("zdjecie4_seliak.html","okienko_z4","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400"); 
                }
 function okno_zamknij()  
                        { 
