--- a/zadanie5_seli.html
+++ b/zadanie5_seli.html
@@ -1,22 +1,22 @@
 <html> 
      <head> 
-            <title> WYKOONAŁ Pavlo Seliak 2G2</title> 
+            <title> WYKONAŁ Pavlo Seliak 2G2</title> 
           <script language="JavaScript">
                function WinOpen_zadanie1()  
                { 
-window.open("zdjecie1_seliak.html","okienko_z1","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+window.open("zdjecie1_seliak.html","zdjecie1","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
                } 
                function WinOpen_zadanie2()  
                { 
-window.open("zdjecie2_seliak.html","okienko_z2","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+window.open("zdjecie2_seliak.html","zdjecie2","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
                } 
              function WinOpen_zadanie3()  
                { 
-window.open("zdjecie3_seliak.html","okienko_z3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
+window.open("zdjecie3_seliak.html","zdjecie3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=200"); 
                } 
 function WinOpen_zadanie4()  
                { 
-window.open("zdjecie4_seliak.html","okienko_z4","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400"); 
+window.open("zdjecie4_seliak.html","zdjecie4","toolbar=no,directories=no,menubar=no,height=380,width=160,top=200,left=400"); 
                }
 function okno_zamknij()  
                        { 
