--- a/zadanie5_seli.html
+++ b/zadanie5_seli.html
@@ -2,19 +2,19 @@
      <head> 
             <title> WYKONAŁ Pavlo Seliak 2G2</title> 
           <script language="JavaScript">
-               function WinOpen_zadanie1()  
+               function WinOpen_zdjecie1()  
                { 
 window.open("zdjecie1_seliak.html","zdjecie1","toolbar=no,directories=no,menubar=no,height=380,width=160,top=50,left=50"); 
                } 
-               function WinOpen_zadanie2()  
+               function WinOpen_zdjecie2()  
                { 
 window.open("zdjecie2_seliak.html","zdjecie2","toolbar=no,directories=no,menubar=no,height=380,width=160,top=50,left=900"); 
                } 
-             function WinOpen_zadanie3()  
+             function WinOpen_zdjecie3()  
                { 
 window.open("zdjecie3_seliak.html","zdjecie3","toolbar=no,directories=no,menubar=no,height=380,width=160,top=500,left=50"); 
                } 
-function WinOpen_zadanie4()  
+function WinOpen_zdjecie4()  
                { 
 window.open("zdjecie4_seliak.html","zdjecie4","toolbar=no,directories=no,menubar=no,height=380,width=160,top=500,left=900"); 
                }
