--- a/zdjecie2_seliak.html
+++ b/zdjecie2_seliak.html
@@ -9,7 +9,7 @@ window.close()
 </head> 
 <body> 
 <h1> Jest lepiej, ale wciąż za mały!</h1>
-<img src="zdjecie2.jfif" />  
+<img src="zdjecie2.jfif" width="360" heght="240">  
 <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
 </body> 
 </html>
