--- a/zdjecie3_seliak.html
+++ b/zdjecie3_seliak.html
@@ -9,7 +9,7 @@ window.close()
 </head> 
 <body> 
 <h1> Dobry autobus, bardzo fajny i śliczny, ale potrzebujemy jeszcze lepszego!!!!</h1>
-<img src="zdjecie3.jpg" />  
+<img src="zdjecie3.jpg" width="160" heght="140">  
 <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
 </body> 
 </html>
