--- a/zdjecie4_seliak.html
+++ b/zdjecie4_seliak.html
@@ -10,7 +10,7 @@ window.close()
 <body> 
 <h1> O tak! To jest już to, czego potrzebujemy!!!
 ...Ile kosztuje taki?</h1>
-<img src="zdjecie4.jpg" />  
+<img src="zdjecie4.jpg" width="160" heght="140">  
 <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
 </body> 
 </html>
