--- a/zadanie1_seli.html
+++ b/zadanie1_seli.html
@@ -1,16 +1,15 @@
- <!DOCTYPE html>  
+<!DOCTYPE html>  
 <html lang="pl-PL">  
-<HTML> 
-<HEAD> 
-<meta charset="utf-8">   
-<TITLE>Osadzanie pliku JS-Seliak</TITLE> 
-</HEAD> 
-<BODY> 
-<SCRIPT> 
-document.write("=========".fontcolor("#FF00FF")+"<br>"); 
-document.write("=".fontcolor("#FF00FF")+"&nbsp;&nbsp;&nbsp;Pavlo".fontcolor("#0000FF")+"&nbsp;&nbsp;"="".fontcolor("#FF00FF")+"<br>"); 
-document.write("=".fontcolor("#FF00FF")+"&nbsp;&nbsp;&nbsp;Seliak".fontcolor("#0000FF")+"&nbsp;&nbsp;"="".fontcolor("#FF00FF")+"<br>"); 
-document.write("=========".fontcolor("#FF00FF")+"<br>"); 
-</SCRIPT> 
-</BODY> 
-</HTML>
+<head> 
+  <meta charset="utf-8">   
+  <title>Osadzanie pliku JS-Seliak</title> 
+</head> 
+<body> 
+<script> 
+  document.write("=========".fontcolor("#FF00FF")+"<br>"); 
+  document.write("=".fontcolor("#FF00FF")+"&nbsp;&nbsp;&nbsp;Pavlo".fontcolor("#0000FF")+"&nbsp;&nbsp;".fontcolor("#FF00FF")+"<br>"); 
+  document.write("=".fontcolor("#FF00FF")+"&nbsp;&nbsp;&nbsp;Seliak".fontcolor("#0000FF")+"&nbsp;&nbsp;".fontcolor("#FF00FF")+"<br>"); 
+  document.write("=========".fontcolor("#FF00FF")+"<br>"); 
+</script> 
+</body> 
+</html>
