--- a/zdjecie1_seliak.html
+++ b/zdjecie1_seliak.html
@@ -8,7 +8,7 @@ window.close()
 </script> 
 </head> 
 <body> 
-<h1> Hmmm... Potrzebujemy dla przedsiębiorstwa autobus... Ale nie taki! On jest bardzo mały!!!</h1>
+<h1> Potrzebujemy dla przedsiębiorstwa autobus... Ale nie taki! On jest bardzo mały!</h1>
 <img src="zdjecie1.jpg" width="160" heght="140">  
 <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
 </body> 
