--- a/zadanie1_seli.html
+++ b/zadanie1_seli.html
@@ -7,7 +7,7 @@
 <body> 
 <script> 
   document.write("=========".fontcolor("#FF00FF")+"<br>"); 
-  document.write("=".fontcolor("#FF00FF")+"&nbsp;&nbsp;&nbsp;Pavlo".fontcolor("#0000FF")+"&nbsp;&nbsp;".fontcolor("#FF00FF")+"=".fontcolor("#FF00FF")+"<br>"); 
+  document.write("=".fontcolor("#FF00FF")+"&nbsp;&nbsp;&nbsp;Pavlo".fontcolor("#0000FF")+"&nbsp;&nbsp;&nbsp;".fontcolor("#FF00FF")+"=".fontcolor("#FF00FF")+"<br>"); 
   document.write("=".fontcolor("#FF00FF")+"&nbsp;&nbsp;&nbsp;Seliak".fontcolor("#0000FF")+"&nbsp;&nbsp;".fontcolor("#FF00FF")+"=".fontcolor("#FF00FF")+"<br>"); 
   document.write("=========".fontcolor("#FF00FF")+"<br>"); 
 </script> 
