--- a/zadanie4_sel.html
+++ b/zadanie4_sel.html
@@ -5,71 +5,53 @@
 <body>  
 <ul>
   <li>
-    <b>kiedy powstał JavaScript (podaj datę). </b><br>
-    W 1995 roku.
+    <b>Jakie są rodzaje okienek?</b><br>
+     Okienko alert – wyświetlająca okienko dialogowe z informacją i przyciskiem OK,  
+     Okienko prompt – generująca okno, w którym użytkownik może wpisać wartość, zwracaną 
+    następnie do programu.  
+     Okienko confirm służy do tego, aby użytkownik coś potwierdził (stąd nazwa confirm). 
   </li>
   <li>
-    <b>dlaczego jest to język skryptowy </b><br>
-    Nie musi zostać skompilowany do kodu maszynowego, aby można było zobaczyć efekty jego działania.
+    <b>Co to jest konwersja liczb? </b><br>
+    Wczytanie zmiennej z użyciem prompt wykonywane jest jako ciąg znaków dlatego konieczna jest 
+konwersji z ciągu znaków na wartości liczbowe aby wykonywac obliczenia. 
+
+parseFloat(zmienna) - konwersja zmiennej do typu float 
+parseInt(zmienna) - konwersja zmiennej do typu int (liczbowego) 
+toString(zmienna) - konwersja zmiennej do typu łańcuchowego
   </li>
   <li>
-    <b>gdzie jest wykonywany JS   (klient lub serwer) </b><br>
-    klient
+    <b>Przy nadawaniu nazw zmiennym należy przestrzegać pewnych zasad: 
+(trzy zasady ) </b><br>
+   1. Nazwa zmiennej musi się zaczynać od litery, znaku "$" lub "_", może zawierać tylko litery (bez 
+polskich znaków), cyfry oraz "$" i "_". 
+Poprawne nazwy zmiennych
+ : zmienna1, $wynik, _rozmiar, wynik1, Rekord, $_gracz 
+Błędne nazwy zmiennych
+ : 1zmienna, wynik gry, wysokosc&szerokosc, wynik.rekord, &gracz, 
+wysokość, imie+nazwisko. 
+2. Wielkość liter ma znaczenie. 
+Rekord i rekord
+ to dwie różne zmienne! Jest to bardzo częsta przyczyna błędów w kodzie 
+początkujących programistów. 
+3. Należy nie używać słów kluczowych JavaScript jako nazw zmiennych. 
   </li>
   <li>
-    <b>dlaczego jest JS to bezpieczne narzędzie </b><br>
-    Bo ma znacznie ograniczone uprawnienia dostępu do zasobów komputera, przy użyciu którego przeglądana jest dana strona, a wszelkie odwołania do funkcji i obiektów wykonywane są w trakcie wykonywania programu. 
-  </li>
-  <li>
-    <b>czy jest to język obiektowy , jeśli tak to dlaczego. </b><br>
-    ponieważ wykorzystuje definicje obiektów, metod, zdarzeń, które mogą być zastosowane do opisu właściwości obiektów. Autorzy JS zdefiniowali bardzo dużo obiektów, metod, zdarzeń.
-  </li>
-  <li>
-    <b>wymień zalety  JS: </b><br>
-    Zaleta1 - Największą zaletą JavaScriptu jest niewątpliwie jego prostota. Język ten uważa się więc za 
-relatywnie łatwy do opanowania i rzeczywiście – nic nie stoi na przeszkodzie, aby zacząć używać go 
-już po kilku minutach od rozpoczęcia nauki.  
-Zaleta2 - Ponieważ jest to obecnie najbardziej rozpowszechniony język skryptowy, w Internecie można 
-znaleźć miliony praktycznych przykładów– witryn wykorzystujących różnorodne funkcje JavaScriptu.  
-Zaleta3 - O olbrzymiej popularności języka zadecydowały z pewnością jego uniwersalność oraz fakt, iż 
-pozwala on na odciążenie serwerów i ograniczenie ilości zbędnych danych przesyłanych pomiędzy 
-nimi a przeglądarką klienta.  
-  </li>
-  <li>
-    <b>Framework to: </b><br>
-    rodzaj programu do tworzenia innych programów  w JS
-  </li>
-  <li>
-    <b>Do aplikacji mobilnych można użyć Framework</b><br>
-    Bardzo popularnym frameworkiem do tworzenia aplikacji jest React Native. Z jego 
-pomocą możemy budować aplikacje mobilne na różne systemy operacyjne (cross-platform apps). 
-Inne popularne front-endowe frameworki to React, Angular i Vue. 
-Budowanie serwerów WWW i tworzenie aplikacji serwerowych 
-  </li>
-  <li>
-    <b>Aplikacje responsywne to: </b><br>
-   Responsywność
- JavaScript udostępnia metody, których można użyć w aplikacji, aby uzyskać 
-bieżący rozmiar ekranu i wykorzystać wynik do wykonania działań w oparciu o ten rozmiar. Używając 
-CSS i HTML można zmienić rozmiar, ukrywać, zmniejszać, powiększać lub przenosić treści, aby 
-wyglądały dobrze na dowolnym ekranie. 
-  </li>
-  <li>
-    <b>Przepisz linie kody pod nimi wytłumaczenie jak działa ten fragment kodu 
- 
-&lsaquo; input type="button" name="przycisk" value="Nowa Strona" onclick="WinOpen(' ')"&rsaquo; &lsaquo;/b&rsaquo; &lsaquo;br &rsaquo;
-    Będzie otworzona nowa strona przy kliknięciu na przycisk "Nowa Srona"
-  </li>
-  <li>
-    <b>Przepisz linie kody pod nimi wytłumaczenie jak działa ta ten fragment kodu 
-window.open("obraz.html","okienko","toolbar=no,directories=no,menubar=no,height=280,width=160,top=200,left=200"); </b><br>
-    toolbar=no ukrywa standardowy pasek narzędzi
-    directories=no ukrywa przyciski katalogów 
-    menubar=no ukrywa menu przeglądarki           
-Height : ustawia wysokość okna - 280 px 
-Width : ustawia szerokość okna - 160 px
-Top: ustawia położenie okna względem góry ekranu  - 200 px
-Left: ustawia położenie okna względem lewej strony ekranu - 200px
+    <b>Omów typy zmiennych w Javascript.  </b><br>
+    W JavaScript nie ma możliwości definiowania różnych typów zmiennych tak jak w C++, typy 
+zmiennych są definiowane w trakcie ich przypisywania.  
+Podstawowe zmienne liczbowe w JavaScript to: 
+Number      Typ liczbowy 
+ zmienna całkowite 
+ zmiennoprzecinkowe 
+String      Typ tekstowy 
+Boolea       Typ logiczny 
+Null       
+     Pusta zawartość 
+Undefined     Typ niezidentyfikowany 
+17 
+ 18 
+Object            Obiekt 
   </li>
 </ul>
 </body> 
