--- a/index.html
+++ b/index.html
@@ -22,8 +22,16 @@ window.open("zadanie4_sel.html","okienko_z4","toolbar=no,directories=no,menubar=
                { 
 window.open("zadanie5_seli.html","okienko_z5","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=350"); 
                }
+               function WinOpen_zadanie5()  
+               { 
+window.open("zadanie6_seli.html","okienko_z6","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=350"); 
+               }
+               function WinOpen_zadanie7()  
+               { 
+window.open("zadanie7_sel.html","okienko_z7","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=350"); 
+               }
 function okno_zamknij()  
-                       { 
+                       {
                              window.close() 
                        } 
           </script> 
@@ -36,6 +44,8 @@ function okno_zamknij()
         <input type="button_zadanie3" name="zadanie3" value="zadanie3-seliak" onclick="WinOpen_zadanie3(' ')"> 
         <input type="button_zadanie4" name="zadanie4" value="zadanie4-seliak" onclick="WinOpen_zadanie4(' ')">
         <input type="button_zadanie5" name="zadanie5" value="zadanie5-seliak" onclick="WinOpen_zadanie5(' ')">
+        <input type="button_zadanie6" name="zadanie6" value="zadanie6-seliak" onclick="WinOpen_zadanie6(' ')">
+        <input type="button_zadanie7" name="zadanie7" value="zadanie7-seliak" onclick="WinOpen_zadanie7(' ')">
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
 </body> 
