--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@ window.open("zadanie8_sel.html","okienko_z8","toolbar=no,directories=no,menubar=
                { 
 window.open("zadanie9_sel.html","okienko_z9","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=350"); 
                }
+               function WinOpen_zadanie10()  
+               { 
+window.open("zadanie10_sel.html","okienko_z10","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=350"); 
+               }
 function okno_zamknij()  
                        {
                              window.close() 
@@ -56,6 +60,7 @@ function okno_zamknij()
         <input type="button_zadanie7" name="zadanie7" value="zadanie7-seliak" onclick="WinOpen_zadanie7(' ')">
         <input type="button_zadanie8" name="zadanie8" value="zadanie8-seliak" onclick="WinOpen_zadanie8(' ')">
         <input type="button_zadanie9" name="zadanie9" value="zadanie9-seliak" onclick="WinOpen_zadanie9(' ')">
+        <input type="button_zadanie10" name="zadanie10" value="zadanie9-seliak" onclick="WinOpen_zadanie10(' ')">
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
 </body> 
