--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@ window.open("zadanie9_sel.html","okienko_z9","toolbar=no,directories=no,menubar=
                { 
 window.open("zadanie10_sel.html","okienko_z10","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=350"); 
                }
+               function WinOpen_zadanie11()  
+               { 
+window.open("zadanie11_seli.html","okienko_z11","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=350"); 
+               }
+               function WinOpen_zadanie11k()  
+               { 
+window.open("zadanie11kod_seli.html","okienko_11k","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=350"); 
+               }
 function okno_zamknij()  
                        {
                              window.close() 
@@ -51,16 +59,28 @@ function okno_zamknij()
 <body> 
      <h1 color="red">SZKIELET ZALICZENIOWY Pavlo Seliak 2G2</h1>
    <form>
-        <input type="button_zadanie1" name="zadanie1" value="zadanie1-seliak" onclick="WinOpen_zadanie1(' ')">
-        <input type="button_zadanie2" name="zadanie2" value="zadanie2-seliak" onclick="WinOpen_zadanie2(' ')">
-        <input type="button_zadanie3" name="zadanie3" value="zadanie3-seliak" onclick="WinOpen_zadanie3(' ')"> 
-        <input type="button_zadanie4" name="zadanie4" value="zadanie4-seliak" onclick="WinOpen_zadanie4(' ')">
-        <input type="button_zadanie5" name="zadanie5" value="zadanie5-seliak" onclick="WinOpen_zadanie5(' ')">
-        <input type="button_zadanie6" name="zadanie6" value="zadanie6-seliak" onclick="WinOpen_zadanie6(' ')">
-        <input type="button_zadanie7" name="zadanie7" value="zadanie7-seliak" onclick="WinOpen_zadanie7(' ')">
-        <input type="button_zadanie8" name="zadanie8" value="zadanie8-seliak" onclick="WinOpen_zadanie8(' ')">
-        <input type="button_zadanie9" name="zadanie9" value="zadanie9-seliak" onclick="WinOpen_zadanie9(' ')">
-        <input type="button_zadanie10" name="zadanie10" value="zadanie10-seliak" onclick="WinOpen_zadanie10(' ')">
+        <input type="button_zadanie1" name="zadanie1" value="zadanie1-seliak" onclick="WinOpen_zadanie1(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
+        <input type="button_zadanie2" name="zadanie2" value="zadanie2-seliak" onclick="WinOpen_zadanie2(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
+        <input type="button_zadanie3" name="zadanie3" value="zadanie3-seliak" onclick="WinOpen_zadanie3(' ')"> <br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
+        <input type="button_zadanie4" name="zadanie4" value="zadanie4-seliak" onclick="WinOpen_zadanie4(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
+        <input type="button_zadanie5" name="zadanie5" value="zadanie5-seliak" onclick="WinOpen_zadanie5(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
+        <input type="button_zadanie6" name="zadanie6" value="zadanie6-seliak" onclick="WinOpen_zadanie6(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
+        <input type="button_zadanie7" name="zadanie7" value="zadanie7-seliak" onclick="WinOpen_zadanie7(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
+        <input type="button_zadanie8" name="zadanie8" value="zadanie8-seliak" onclick="WinOpen_zadanie8(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
+        <input type="button_zadanie9" name="zadanie9" value="zadanie9-seliak" onclick="WinOpen_zadanie9(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
+        <input type="button_zadanie10" name="zadanie10" value="zadanie10-seliak" onclick="WinOpen_zadanie10(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
+        <input type="button_zadanie11" name="zadanie11" value="zadanie11-seliak" onclick="WinOpen_zadanie11(' ')"><br> <input type="button_zadanie11k" name="zadanie11k" value="zadanie11k-seliak" onclick="WinOpen_zadanie11k(' ')"><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
 </body> 
