--- a/zadanie11_seli_kod.html
+++ b/zadanie11_seli_kod.html
@@ -14,13 +14,13 @@
               var b=parseFloat(D2_bil); 
                 sekund=(a-b)*24*60*60; 
               document.write("Ilość sekund między dniami "+a+" i "+b+" = "+sekund+"<br>"); 
-                function okno_zamknij_bilyi() 
+                function okno_zamknij_seliak() 
                  { 
                    window.close() 
                  } 
               </script> 
             </div> 
-          <input type="button" value="zamknij okno" onclick="okno_zamknij_bilyi()"/> 
+          <input type="button" value="zamknij okno" onclick="okno_zamknij_seliak()"/> 
         </body> 
        </html> 
       </textarea> 
