--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ function okno_zamknij()
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
         <input type="button_zadanie10" name="zadanie10" value="zadanie10-seliak" onclick="WinOpen_zadanie10(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
-        <input type="button_zadanie11" name="zadanie11" value="zadanie11-seliak" onclick="WinOpen_zadanie11(' ')"><br> <input type="button_zadanie11k" name="zadanie11k" value="zadanie11k-seliak" onclick="WinOpen_zadanie11k(' ')"><br> 
+        <input type="button_zadanie11" name="zadanie11" value="zadanie11-seliak" onclick="WinOpen_zadanie11(' ')"><input type="button_zadanie11k" name="zadanie11k" value="zadanie11k-seliak" onclick="WinOpen_zadanie11k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
