--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ window.open("zadanie11_seli.html","okienko_z11","toolbar=no,directories=no,menub
                }
                function WinOpen_zadanie11k()  
                { 
-window.open("zadanie11kod_seli.html","okienko_11k","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=350"); 
+window.open("zadanie11_seli_kod.html","okienko_11k","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=350"); 
                }
 function okno_zamknij()  
                        {
