--- a/zadanie11_seli_kod.html
+++ b/zadanie11_seli_kod.html
@@ -7,8 +7,8 @@
             <script language="JavaScript"> 
 // Pavlo Seliak   26.09.2025 
 // Zadanie 11  
-              var D1_bil=prompt("Data1=",""); 
-              var D2_bil=prompt("Data2=",""); 
+              var D1_sel=prompt("Data1=",""); 
+              var D2_sel=prompt("Data2=",""); 
               var sekund; 
               var a=parseFloat(D1_bil); 
               var b=parseFloat(D2_bil); 
