--- a/zadanie11_seli_kod.html
+++ b/zadanie11_seli_kod.html
@@ -10,8 +10,8 @@
               var D1_sel=prompt("Data1=",""); 
               var D2_sel=prompt("Data2=",""); 
               var sekund; 
-              var a=parseFloat(D1_bil); 
-              var b=parseFloat(D2_bil); 
+              var a=parseFloat(D1_sel); 
+              var b=parseFloat(D2_sel); 
                 sekund=(a-b)*24*60*60; 
               document.write("Ilość sekund między dniami "+a+" i "+b+" = "+sekund+"<br>"); 
                 function okno_zamknij_seliak() 
