--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@ window.open("zadanie11_seli.html","okienko_z11","toolbar=no,directories=no,menub
                { 
 window.open("zadanie11_seli_kod.html","okienko_11k","toolbar=no,directories=no,menubar=no,height=600,width=800,top=200,left=350"); 
                }
+               function WinOpen_zadanie12()  
+               { 
+window.open("zadanie12_seli.html","okienko_z12","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=350"); 
+               }
 function okno_zamknij()  
                        {
                              window.close() 
@@ -80,6 +84,8 @@ function okno_zamknij()
         <input type="button_zadanie10" name="zadanie10" value="zadanie10-seliak" onclick="WinOpen_zadanie10(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
         <input type="button_zadanie11" name="zadanie11" value="zadanie11-seliak" onclick="WinOpen_zadanie11(' ')"><input type="button_zadanie11k" name="zadanie11k" value="zadanie11k-seliak" onclick="WinOpen_zadanie11k(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
+        <input type="button_zadanie12" name="zadanie12" value="zadanie12-seliak" onclick="WinOpen_zadanie12(' ')"><input type="button_zadanie12k" name="zadanie12k" value="zadanie12k-seliak" onclick="WinOpen_zadanie12k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
