--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@ window.open("zadanie11_seli_kod.html","okienko_11k","toolbar=no,directories=no,m
                { 
 window.open("zadanie12_seli.html","okienko_z12","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=350"); 
                }
+               function WinOpen_zadanie12k()  
+               { 
+window.open("zadanie12_seli_kod.html","okienko_z12k","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=350"); 
+               }
 function okno_zamknij()  
                        {
                              window.close() 
