--- a/zadanie11_seli_kod.html
+++ b/zadanie11_seli_kod.html
@@ -9,11 +9,15 @@
 // Zadanie 11  
               var D1_sel=prompt("Data1=",""); 
               var D2_sel=prompt("Data2=",""); 
+              var G1_sel=prompt("Data1=",""); 
+              var G2_sel=prompt("Data2=",""); 
               var sekund; 
               var a=parseFloat(D1_sel); 
-              var b=parseFloat(D2_sel); 
-                sekund=(a-b)*24*60*60; 
-              document.write("Ilość sekund między dniami "+a+" i "+b+" = "+sekund+"<br>"); 
+              var b=parseFloat(D2_sel);
+              var r=parseFloat(G1_sel); 
+              var p=parseFloat(G2_sel);
+                sekund=((a-b)*24*60*60)+((r-p)*60*60); 
+              document.write("Ilość sekund między dniem "+a+", godziną "+r+" i dniem  "+b+" i godziną "+p+" wynosi "+sekund+"<br>"); 
                 function okno_zamknij_seliak() 
                  { 
                    window.close() 
