--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@ window.open("zadanie12_seli.html","okienko_z12","toolbar=no,directories=no,menub
                { 
 window.open("zadanie12_seli_kod.html","okienko_z12k","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=350"); 
                }
+               function WinOpen_zadanie13()  
+               { 
+window.open("zadanie13_seli_kod.html","okienko_z13","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=350"); 
+               }
+               function WinOpen_zadanie13k()  
+               { 
+window.open("zadanie13_seli_kod.html","okienko_z13k","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=350"); 
+               }
 function okno_zamknij()  
                        {
                              window.close() 
@@ -90,6 +98,8 @@ function okno_zamknij()
         <input type="button_zadanie11" name="zadanie11" value="zadanie11-seliak" onclick="WinOpen_zadanie11(' ')"><input type="button_zadanie11k" name="zadanie11k" value="zadanie11k-seliak" onclick="WinOpen_zadanie11k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
         <input type="button_zadanie12" name="zadanie12" value="zadanie12-seliak" onclick="WinOpen_zadanie12(' ')"><input type="button_zadanie12k" name="zadanie12k" value="zadanie12k-seliak" onclick="WinOpen_zadanie12k(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
+        <input type="button_zadanie13" name="zadanie13" value="zadanie13-seliak" onclick="WinOpen_zadanie13(' ')"><input type="button_zadanie13k" name="zadanie13k" value="zadanie13k-seliak" onclick="WinOpen_zadanie13k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
