--- a/index.html
+++ b/index.html
@@ -60,11 +60,27 @@ window.open("zadanie12_seli_kod.html","okienko_z12k","toolbar=no,directories=no,
                }
                function WinOpen_zadanie13()  
                { 
-window.open("zadanie13_seli_kod.html","okienko_z13","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=350"); 
+window.open("zadanie13_seli.html","okienko_z13","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=350"); 
                }
                function WinOpen_zadanie13k()  
                { 
 window.open("zadanie13_seli_kod.html","okienko_z13k","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=350"); 
+               }
+               function WinOpen_zadanie14()  
+               { 
+window.open("zadanie14_seli.html","okienko_z14","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=350"); 
+               }
+               function WinOpen_zadanie14k()  
+               { 
+window.open("zadanie14_seli_kod.html","okienko_z14k","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=350"); 
+               }
+               function WinOpen_zadanie15()  
+               { 
+window.open("zadanie15_seli.html","okienko_z15","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=350"); 
+               }
+               function WinOpen_zadanie15k()  
+               { 
+window.open("zadanie15_seli_kod.html","okienko_z15k","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=350"); 
                }
 function okno_zamknij()  
                        {
@@ -100,7 +116,25 @@ function okno_zamknij()
         <input type="button_zadanie12" name="zadanie12" value="zadanie12-seliak" onclick="WinOpen_zadanie12(' ')"><input type="button_zadanie12k" name="zadanie12k" value="zadanie12k-seliak" onclick="WinOpen_zadanie12k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
         <input type="button_zadanie13" name="zadanie13" value="zadanie13-seliak" onclick="WinOpen_zadanie13(' ')"><input type="button_zadanie13k" name="zadanie13k" value="zadanie13k-seliak" onclick="WinOpen_zadanie13k(' ')"><br><br> 
-<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
+        <input type="button_zadanie14" name="zadanie14" value="zadanie14-seliak" onclick="WinOpen_zadanie14(' ')"><input type="button_zadanie14k" name="zadanie14k" value="zadanie14k-seliak" onclick="WinOpen_zadanie14k(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
+        <input type="button_zadanie15" name="zadanie15" value="zadanie15-seliak" onclick="WinOpen_zadanie15(' ')"><input type="button_zadanie15k" name="zadanie15k" value="zadanie15k-seliak" onclick="WinOpen_zadanie15k(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
+        <input type="button_zadanie16" name="zadanie16" value="zadanie16-seliak" onclick="WinOpen_zadanie16(' ')"><input type="button_zadanie16k" name="zadanie16k" value="zadanie16k-seliak" onclick="WinOpen_zadanie16k(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
+<!--        <input type="button_zadanie13" name="zadanie13" value="zadanie13-seliak" onclick="WinOpen_zadanie13(' ')"><input type="button_zadanie13k" name="zadanie13k" value="zadanie13k-seliak" onclick="WinOpen_zadanie13k(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
+        <input type="button_zadanie14" name="zadanie14" value="zadanie14-seliak" onclick="WinOpen_zadanie14(' ')"><input type="button_zadanie14k" name="zadanie14k" value="zadanie14k-seliak" onclick="WinOpen_zadanie14k(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
+        <input type="button_zadanie13" name="zadanie13" value="zadanie13-seliak" onclick="WinOpen_zadanie13(' ')"><input type="button_zadanie13k" name="zadanie13k" value="zadanie13k-seliak" onclick="WinOpen_zadanie13k(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
+        <input type="button_zadanie14" name="zadanie14" value="zadanie14-seliak" onclick="WinOpen_zadanie14(' ')"><input type="button_zadanie14k" name="zadanie14k" value="zadanie14k-seliak" onclick="WinOpen_zadanie14k(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
+        <input type="button_zadanie13" name="zadanie13" value="zadanie13-seliak" onclick="WinOpen_zadanie13(' ')"><input type="button_zadanie13k" name="zadanie13k" value="zadanie13k-seliak" onclick="WinOpen_zadanie13k(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
+        <input type="button_zadanie14" name="zadanie14" value="zadanie14-seliak" onclick="WinOpen_zadanie14(' ')"><input type="button_zadanie14k" name="zadanie14k" value="zadanie14k-seliak" onclick="WinOpen_zadanie14k(' ')"><br><br> 
+<HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red> -->
         <input type="button" value="zamknij okno" onclick="okno_zamknij()"/> 
     </form> 
 </body> 
