--- a/zadanie15_seli_kod.html
+++ b/zadanie15_seli_kod.html
@@ -1,20 +1,17 @@
 <html> 
    <body> 
      <textarea cols="90" rows="24"> 
-          <html> 
+           <html> 
          <body> 
           <div style="color:green;font-size:50px;"> 
             <script language="JavaScript"> 
-// Pavlo Seliak   26.09.2025 
-// Zadanie 11  
-              var m_sel=prompt("m=",""); 
-              var b_sel; 
-              var c_sel; 
-              var sekund; 
-              var a=parseFloat(m_sel); 
-             b_sel=a_sel+1;
-              c_sel=a_sel*(a_sel+1);
-              document.write("1/"+a_sel+"=1/"+b_sel+"+1/"+c_sel+"<br>"); 
+// Pavlo Seliak   03.10.2025 
+// Zadanie 15  
+              var D1_sel=prompt("Liczba=","");  
+              var m; 
+              var a=parseFloat(D1_sel); 
+                m=(a*2); 
+              document.write(""+a+" = 1/"+m+" + 1/"+m+""); 
                 function okno_zamknij_seliak() 
                  { 
                    window.close() 
