--- a/zadanie14_seli_kod.html
+++ b/zadanie14_seli_kod.html
@@ -1,20 +1,21 @@
 <html> 
    <body> 
      <textarea cols="90" rows="24"> 
-          <html> 
+           <html> 
          <body> 
           <div style="color:green;font-size:50px;"> 
             <script language="JavaScript"> 
-// Pavlo Seliak   26.09.2025 
-// Zadanie 11  
-              var m_sel=prompt("m=",""); 
-              var b_sel; 
-              var c_sel; 
-              var sekund; 
-              var a=parseFloat(m_sel); 
-             b_sel=a_sel+1;
-              c_sel=a_sel*(a_sel+1);
-              document.write("1/"+a_sel+"=1/"+b_sel+"+1/"+c_sel+"<br>"); 
+// Pavlo Seliak   03.10.2025 
+// Zadanie 15  
+              var D1_sel=prompt("Liczba=","");  
+              var m; 
+              var h; 
+              var l; 
+              var a=parseFloat(D1_sel); 
+                m=(a+2);
+                h=((a+1)*(a+2));
+                l=(a*(a+1))
+              document.write(""+a+" = 1/"+m+" + 1/"+h+" + 1/"+l+""); 
                 function okno_zamknij_seliak() 
                  { 
                    window.close() 
@@ -23,7 +24,7 @@
             </div> 
           <input type="button" value="zamknij okno" onclick="okno_zamknij_seliak()"/> 
         </body> 
-       </html> 
+       </html>  
       </textarea> 
     </body> 
 </html> 
