--- a/zadanie15_seli.html
+++ b/zadanie15_seli.html
@@ -8,7 +8,7 @@
               var m; 
               var a=parseFloat(D1_sel); 
                 m=(a*2); 
-              document.write(""+a+" = 1/"+m+" + 1/"+m+""); 
+              document.write("1/"+a+" = 1/"+m+" + 1/"+m+""); 
                 function okno_zamknij_seliak() 
                  { 
                    window.close() 
