--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@ window.open("zadanie15_seli.html","okienko_z15","toolbar=no,directories=no,menub
                { 
 window.open("zadanie15_seli_kod.html","okienko_z15k","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=350"); 
                }
+               function WinOpen_zadanie16()  
+               { 
+window.open("zadanie16_seli.html","okienko_z16","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=350"); 
+               }
+               function WinOpen_zadanie16k()  
+               { 
+window.open("zadanie16_seli_kod.html","okienko_z16k","toolbar=no,directories=no,menubar=no,height=400,width=500,top=200,left=350"); 
+               }
 function okno_zamknij()  
                        {
                              window.close() 
