--- a/zadanie16_seli.html
+++ b/zadanie16_seli.html
@@ -18,7 +18,7 @@
               e=3*a*b*b;
               f=b*b*b;
               o=c+d+e+f;
-              document.write("("+a+" + "+b+")^3 = "+a+"^3+3*(("+a+")*("+b+")^2)+ 3*(("+a+")^2)*("+b+") + "+a+"^3 = "+o+""); 
+              document.write("("+a+" + "+b+")^3 = "+a+"^3+3*(("+a+")*("+b+")^2))+ 3*(("+a+")^2)*("+b+")) + "+a+"^3 = "+o+""); 
                 function okno_zamknij_seliak() 
                  { 
                    window.close() 
