--- a/zadanie1_seli.html
+++ b/zadanie1_seli.html
@@ -5,6 +5,10 @@
   <title>Osadzanie pliku JS-Seliak</title> 
 </head> 
 <body> 
+  <br>Mój NOWY numer w dzienniku to 21, ale w zadaniach 22.
+Obramowanie ze znaków =
+  numer koloru obramowania to 8, fuchsia
+  numer koloru tekstu to 14, blue
 <script> 
   document.write("=========".fontcolor("#FF00FF")+"<br>"); 
   document.write("=".fontcolor("#FF00FF")+"&nbsp;&nbsp;&nbsp;Pavlo".fontcolor("#0000FF")+"&nbsp;&nbsp;&nbsp;".fontcolor("#FF00FF")+"=".fontcolor("#FF00FF")+"<br>"); 
