--- a/zadanie2_seli.html
+++ b/zadanie2_seli.html
@@ -6,6 +6,9 @@
           <TITLE>SKRYPT zewnętrzny-Seliak</TITLE> 
 </HEAD> 
 <BODY> 
+<h1> Mój NOWY numer w dzienniku to 21, w zadaniach - 22
+Pierwszy wiersz to:   8     Tak Tak 7 
+Drugi wiersz to:          8     Tak Tak 7</h1>
         <SCRIPT type="text/javascript" src="seliak_zewnetrzny.js"></SCRIPT> 
 </BODY> 
 </HTML>
