--- a/zadanie2_seli.html
+++ b/zadanie2_seli.html
@@ -6,7 +6,7 @@
           <TITLE>SKRYPT zewnętrzny-Seliak</TITLE> 
 </HEAD> 
 <BODY> 
-<h1> Mój NOWY numer w dzienniku to 21, w zadaniach - 22 <br>
+<h1> Mój NOWY numer w dzienniku to 21, ale w zadaniu jest wykorzystywany 22, ponieważ zmiana w numerach w dzienniku była niedawno. <br>
 Pierwszy wiersz to:   8     Tak Tak 7 <br>
 Drugi wiersz to:          8     Tak Tak 7<br></h1>
         <SCRIPT type="text/javascript" src="seliak_zewnetrzny.js"></SCRIPT> 
