--- a/zadanie1_seli.html
+++ b/zadanie1_seli.html
@@ -5,7 +5,7 @@
   <title>Osadzanie pliku JS-Seliak</title> 
 </head> 
 <body> 
-  <br>Mój NOWY numer w dzienniku to 21, ale w zadaniach jest wykorzystywany 22, ponieważ zmiana w numerach w dzienniku była niedawno.<br>
+  <br>Mój NOWY numer w dzienniku to 21, ale w zadaniu jest wykorzystywany 22, ponieważ zmiana w numerach w dzienniku była niedawno.<br>
 Obramowanie ze znaków =<br>
   numer koloru obramowania to 8, fuchsia<br>
   numer koloru tekstu to 14, blue<br>
