Add meta charset for UTF-8 support
Added meta charset tag for UTF-8 support.

--- a/zadanie11_seli_kod.html
+++ b/zadanie11_seli_kod.html
@@ -5,6 +5,7 @@
          <body> 
           <div style="color:green;font-size:50px;"> 
             <script language="JavaScript"> 
+           <meta charset="utf-8">
 // Pavlo Seliak   26.09.2025 
 // Zadanie 11  
               var D1_sel=prompt("Data1=",""); 
