--- a/zadanie16_seli_kod.html
+++ b/zadanie16_seli_kod.html
@@ -5,6 +5,7 @@
          <body> 
           <div style="color:green;font-size:50px;"> 
             <script language="JavaScript"> 
+        <meta charset="utf-8">
 // Pavlo Seliak   03.10.2025 
 // Zadanie 15  
               var D1_sel=prompt("A=","");  
