--- a/zadanie11_seli.html
+++ b/zadanie11_seli.html
@@ -1,6 +1,7 @@
  <html> 
          <body> 
           <div style="color:green;font-size:50px;"> 
+           <meta charset="utf-8">
             <script language="JavaScript"> 
 // Pavlo Seliak   26.09.2025 
 // Zadanie 11  
