--- a/zadanie18_seli.html
+++ b/zadanie18_seli.html
@@ -15,18 +15,18 @@ function odejmowanie_sel(a, b) {
 return a - b;}
   
 function mnozenie_sel(a, b) {
-return a + b;}
+return a * b;}
   
 function od_kwadratu_sel(a, b) {
 return a + b;}
   
 function reszta_z_dzielenia_a_przez_b_sel(a, b) {
-return a + b;}
+return a % b;}
 
 document.write("suma="+suma_sel(a,b)+"<br>");
 document.write("odejmowanie="+suma_sel(a,b)+"<br>");
 document.write("suma="+mnozenie_sel(a,b)+"<br>");
-document.write("suma="+od_kwadratu_sel(a,b)+"<br>");
+document.write("suma="+od_kwadratu_sel(a*a,b*b)+"<br>");
 document.write("suma="+reszta_z_dzielenia_a_przez_b_sel(a,b)+"<br>");
 </script>
 </div>
