Add meta charset to HTML head section

--- a/zadanie13_seli_kod.html
+++ b/zadanie13_seli_kod.html
@@ -1,11 +1,14 @@
 <html> 
+   <head>
+<meta charset="utf-8">
+</head>
    <body> 
      <textarea cols="90" rows="24"> 
+        
           <html> 
          <body> 
           <div style="color:green;font-size:50px;"> 
             <script language="JavaScript"> 
-            <meta charset="utf-8">
 // Pavlo Seliak   26.09.2025 
 // Zadanie 11  
               var m_sel=prompt("m=",""); 
