--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@ window.open("zadanie16_seli.html","okienko_z16","toolbar=no,directories=no,menub
                { 
 window.open("zadanie16_seli_kod.html","okienko_z16k","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
                }
+               function WinOpen_zadanie18()  
+               { 
+window.open("zadanie18_seli_kod.html","okienko_z18","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
 function okno_zamknij()  
                        {
                              window.close() 
@@ -131,9 +135,9 @@ function okno_zamknij()
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
         <input type="button_zadanie16" name="zadanie16" value="zadanie16-seliak" onclick="WinOpen_zadanie16(' ')"><input type="button_zadanie16k" name="zadanie16k" value="zadanie16k-seliak" onclick="WinOpen_zadanie16k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
-<!--        <input type="button_zadanie13" name="zadanie13" value="zadanie13-seliak" onclick="WinOpen_zadanie13(' ')"><input type="button_zadanie13k" name="zadanie13k" value="zadanie13k-seliak" onclick="WinOpen_zadanie13k(' ')"><br><br> 
+        <input type="button_zadanie18" name="zadanie18" value="zadanie18-seliak" onclick="WinOpen_zadanie18(' ')"><input type="button_zadanie18k" name="zadanie18k" value="zadanie18k-seliak" onclick="WinOpen_zadanie18k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
-        <input type="button_zadanie14" name="zadanie14" value="zadanie14-seliak" onclick="WinOpen_zadanie14(' ')"><input type="button_zadanie14k" name="zadanie14k" value="zadanie14k-seliak" onclick="WinOpen_zadanie14k(' ')"><br><br> 
+ <!--       <input type="button_zadanie14" name="zadanie14" value="zadanie14-seliak" onclick="WinOpen_zadanie14(' ')"><input type="button_zadanie14k" name="zadanie14k" value="zadanie14k-seliak" onclick="WinOpen_zadanie14k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
         <input type="button_zadanie13" name="zadanie13" value="zadanie13-seliak" onclick="WinOpen_zadanie13(' ')"><input type="button_zadanie13k" name="zadanie13k" value="zadanie13k-seliak" onclick="WinOpen_zadanie13k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
