--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@ window.open("zadanie16_seli_kod.html","okienko_z16k","toolbar=no,directories=no,
                { 
 window.open("zadanie18_seli_kod.html","okienko_z18","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
                }
+               function WinOpen_zadanie19()  
+               { 
+window.open("zadanie19_seli_kod.html","okienko_z19","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
 function okno_zamknij()  
                        {
                              window.close() 
@@ -137,9 +141,9 @@ function okno_zamknij()
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
         <input type="button_zadanie18" name="zadanie18" value="zadanie18-seliak" onclick="WinOpen_zadanie18(' ')"><input type="button_zadanie18k" name="zadanie18k" value="zadanie18k-seliak" onclick="WinOpen_zadanie18k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
- <!--       <input type="button_zadanie14" name="zadanie14" value="zadanie14-seliak" onclick="WinOpen_zadanie14(' ')"><input type="button_zadanie14k" name="zadanie14k" value="zadanie14k-seliak" onclick="WinOpen_zadanie14k(' ')"><br><br> 
+       <input type="button_zadanie19" name="zadanie19" value="zadanie19-seliak" onclick="WinOpen_zadanie19(' ')"><input type="button_zadanie19k" name="zadanie19k" value="zadanie19k-seliak" onclick="WinOpen_zadanie19k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
-        <input type="button_zadanie13" name="zadanie13" value="zadanie13-seliak" onclick="WinOpen_zadanie13(' ')"><input type="button_zadanie13k" name="zadanie13k" value="zadanie13k-seliak" onclick="WinOpen_zadanie13k(' ')"><br><br> 
+  <!--       <input type="button_zadanie13" name="zadanie13" value="zadanie13-seliak" onclick="WinOpen_zadanie13(' ')"><input type="button_zadanie13k" name="zadanie13k" value="zadanie13k-seliak" onclick="WinOpen_zadanie13k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
         <input type="button_zadanie14" name="zadanie14" value="zadanie14-seliak" onclick="WinOpen_zadanie14(' ')"><input type="button_zadanie14k" name="zadanie14k" value="zadanie14k-seliak" onclick="WinOpen_zadanie14k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
