Update window.open calls for zadanie18 and zadanie19

--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@ window.open("zadanie16_seli_kod.html","okienko_z16k","toolbar=no,directories=no,
                }
                function WinOpen_zadanie18()  
                { 
-window.open("zadanie18_seli_kod.html","okienko_z18","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+window.open("zadanie18_seli.html","okienko_z18","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
                }
                function WinOpen_zadanie19()  
                { 
-window.open("zadanie19_seli_kod.html","okienko_z19","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+window.open("zadanie19_seli.html","okienko_z19","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
                }
 function okno_zamknij()  
                        {
