--- a/index.html
+++ b/index.html
@@ -98,6 +98,14 @@ window.open("zadanie18_seli.html","okienko_z18","toolbar=no,directories=no,menub
                { 
 window.open("zadanie19_seli.html","okienko_z19","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
                }
+               function WinOpen_zadanie21()  
+               { 
+window.open("zadanie21_seli.html","okienko_z21","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
+               function WinOpen_zadanie21k()  
+               { 
+window.open("zadanie21_seli_kod.html","okienko_z21k","toolbar=no,directories=no,menubar=no,height=600,width=1000,top=200,left=350"); 
+               }
 function okno_zamknij()  
                        {
                              window.close() 
@@ -143,9 +151,9 @@ function okno_zamknij()
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
        <input type="button_zadanie19" name="zadanie19" value="zadanie19-seliak" onclick="WinOpen_zadanie19(' ')"><input type="button_zadanie19k" name="zadanie19k" value="zadanie19k-seliak" onclick="WinOpen_zadanie19k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
-  <!--       <input type="button_zadanie13" name="zadanie13" value="zadanie13-seliak" onclick="WinOpen_zadanie13(' ')"><input type="button_zadanie13k" name="zadanie13k" value="zadanie13k-seliak" onclick="WinOpen_zadanie13k(' ')"><br><br> 
+         <input type="button_zadanie21" name="zadanie21" value="zadanie21-seliak" onclick="WinOpen_zadanie21(' ')"><input type="button_zadanie21k" name="zadanie21k" value="zadanie21k-seliak" onclick="WinOpen_zadanie21k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
-        <input type="button_zadanie14" name="zadanie14" value="zadanie14-seliak" onclick="WinOpen_zadanie14(' ')"><input type="button_zadanie14k" name="zadanie14k" value="zadanie14k-seliak" onclick="WinOpen_zadanie14k(' ')"><br><br> 
+   <!--     <input type="button_zadanie14" name="zadanie14" value="zadanie14-seliak" onclick="WinOpen_zadanie14(' ')"><input type="button_zadanie14k" name="zadanie14k" value="zadanie14k-seliak" onclick="WinOpen_zadanie14k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
         <input type="button_zadanie13" name="zadanie13" value="zadanie13-seliak" onclick="WinOpen_zadanie13(' ')"><input type="button_zadanie13k" name="zadanie13k" value="zadanie13k-seliak" onclick="WinOpen_zadanie13k(' ')"><br><br> 
 <HR SIZE=4 WIDTH=50% ALIGN=LEFT COLOR=red>
